--- a/gindex.html
+++ b/gindex.html
@@ -226,7 +226,7 @@
 
     <div class="tabs">
       <div class="tab active">All</div>
-      <div class="tab">Popular</div>
+      <div class="tab">OFFERS</div>
     </div>
 
     <div class="grid" id="categoryGrid">
