--- a/gcart.html
+++ b/gcart.html
@@ -290,7 +290,7 @@
         <!-- Delivery charge is calculated internally but NOT shown to user -->
         
         <div class="total-row grand-total">
-          <span>Grand Total (incl. ₹20 delivery)</span>
+          <span>Grand Total  </span>
           <span id="grandTotal">₹0</span>
         </div>
 
