--- a/gitems.html
+++ b/gitems.html
@@ -4,239 +4,114 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Grocery Items — ChatPoint</title>
-
 <style>
 :root{
-  --primary:#2563eb;
-  --primary-dark:#1d4ed8;
-  --bg:#f8fafc;
-  --card:#ffffff;
-  --text:#1e293b;
-  --muted:#64748b;
-  --border:#e2e8f0;
-  --radius:16px;
-  --shadow:0 8px 22px rgba(0,0,0,.08);
+  --primary:#2563eb;--bg:#f8fafc;--card:#ffffff;--text:#1e293b;--muted:#64748b;--border:#e2e8f0;--radius:16px;--shadow:0 8px 22px rgba(0,0,0,.08);
 }
-
 *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
-
-body{
-  margin:0;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  background:var(--bg);
-  color:var(--text);
-  padding-bottom:110px;
-}
-
-/* HEADER */
-.header{
-  position:sticky;top:0;z-index:20;
-  background:#fff;
-  display:flex;align-items:center;gap:14px;
-  padding:14px 16px;
-  box-shadow:0 2px 10px rgba(0,0,0,.06);
-}
+body{margin:0;font-family:system-ui;background:var(--bg);color:var(--text);padding-bottom:110px;}
+.header{position:sticky;top:0;z-index:20;background:#fff;display:flex;align-items:center;gap:14px;padding:14px 16px;box-shadow:0 2px 10px rgba(0,0,0,.06);}
 .back{font-size:26px;cursor:pointer;color:var(--primary)}
 .title{font-size:20px;font-weight:600;flex:1}
 .cart-icon{font-size:24px;position:relative;cursor:pointer}
-.cart-count{
-  position:absolute;top:-6px;right:-6px;
-  background:#ef4444;color:#fff;
-  width:18px;height:18px;border-radius:50%;
-  font-size:11px;font-weight:700;
-  display:flex;align-items:center;justify-content:center;
-}
-
-/* GRID */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:16px;
-  padding:16px;
-}
+.cart-count{position:absolute;top:-6px;right:-6px;background:#ef4444;color:#fff;width:18px;height:18px;border-radius:50%;font-size:11px;font-weight:700;display:flex;align-items:center;justify-content:center;}
+.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;padding:16px;}
 @media(min-width:480px){.grid{grid-template-columns:repeat(3,1fr)}}
-
-/* ITEM CARD */
-.item{
-  background:var(--card);
-  border-radius:var(--radius);
-  box-shadow:var(--shadow);
-  overflow:hidden;
-  display:flex;
-  flex-direction:column;
-  transition:transform .25s ease;
-}
+.item{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column;transition:transform .25s;}
 .item:active{transform:scale(.97)}
-
-.item img{
-  width:100%;
-  aspect-ratio:1/1;
-  object-fit:cover;
-  background:#f1f5f9;
-}
-
-/* INFO */
-.info{
-  padding:12px 12px 8px;
-  flex:1;
-}
-.name{
-  font-size:14px;
-  font-weight:600;
-  line-height:1.35;
-  margin-bottom:6px;
-  display:-webkit-box;
-  -webkit-line-clamp:2;
-  -webkit-box-orient:vertical;
-  overflow:hidden;
-}
-.price{
-  font-size:16px;
-  font-weight:700;
-  color:var(--primary);
-}
-
-/* ACTION ROW */
-.action{
-  padding:10px 12px 14px;
-  display:flex;
-  justify-content:flex-end;
-}
-.add-btn{
-  background:var(--primary);
-  color:#fff;
-  border:none;
-  width:44px;height:44px;
-  border-radius:50%;
-  font-size:22px;
-  font-weight:700;
-  cursor:pointer;
-  position:relative;
-  overflow:hidden;
-}
+.item img{width:100%;aspect-ratio:1/1;object-fit:cover;background:#f1f5f9;}
+.info{padding:12px 12px 8px;flex:1;}
+.name{font-size:14px;font-weight:600;line-height:1.35;margin-bottom:6px;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
+.price{display:flex;align-items:center;gap:8px;font-weight:700;}
+.original-price{color:#94a3b8;text-decoration:line-through;font-size:14px;}
+.offer-price{color:var(--primary);font-size:18px;}
+.action{padding:10px 12px 14px;display:flex;justify-content:flex-end;}
+.add-btn{background:var(--primary);color:#fff;border:none;width:44px;height:44px;border-radius:50%;font-size:22px;font-weight:700;cursor:pointer;position:relative;overflow:hidden;}
 .add-btn:active{transform:scale(.9)}
-
-/* SVG RIPPLE */
-.add-btn svg{
-  position:absolute;
-  inset:0;
-  pointer-events:none;
-  opacity:0;
-}
-.add-btn.active svg{
-  animation:ripple .6s ease;
-}
-@keyframes ripple{
-  0%{opacity:.4;transform:scale(.4)}
-  100%{opacity:0;transform:scale(2)}
-}
-
-/* BOTTOM CART */
-.bottom-cart-bar{
-  position:fixed;
-  bottom:12px;left:50%;
-  transform:translateX(-50%) translateY(120%);
-  background:#fff;
-  width:calc(100% - 24px);
-  max-width:420px;
-  padding:14px 16px;
-  border-radius:22px;
-  box-shadow:0 12px 28px rgba(0,0,0,.18);
-  display:flex;justify-content:space-between;align-items:center;
-  transition:.4s cubic-bezier(.25,.8,.25,1);
-}
+.add-btn svg{position:absolute;inset:0;pointer-events:none;opacity:0;}
+.add-btn.active svg{animation:ripple .6s ease;}
+@keyframes ripple{0%{opacity:.4;transform:scale(.4)}100%{opacity:0;transform:scale(2)}}
+.bottom-cart-bar{position:fixed;bottom:12px;left:50%;transform:translateX(-50%) translateY(120%);background:#fff;width:calc(100%-24px);max-width:420px;padding:14px 16px;border-radius:22px;box-shadow:0 12px 28px rgba(0,0,0,.18);display:flex;justify-content:space-between;align-items:center;transition:.4s cubic-bezier(.25,.8,.25,1);}
 .bottom-cart-bar.visible{transform:translateX(-50%)}
-
 .cart-summary{font-weight:600}
 .cart-price{color:var(--primary);font-size:18px}
-
-.view-cart-btn{
-  background:var(--primary);
-  color:#fff;
-  border:none;
-  padding:12px 24px;
-  border-radius:24px;
-  font-size:16px;
-  font-weight:600;
-}
-
-/* STATES */
-.loading-state{
-  grid-column:1/-1;
-  text-align:center;
-  padding:60px 20px;
-  color:var(--muted);
-}
+.view-cart-btn{background:var(--primary);color:#fff;border:none;padding:12px 24px;border-radius:24px;font-size:16px;font-weight:600;}
+.loading-state{grid-column:1/-1;text-align:center;padding:60px 20px;color:var(--muted);}
 </style>
 </head>
-
 <body>
-
 <div class="header">
   <div class="back" onclick="history.back()">←</div>
   <div class="title" id="categoryName">Loading...</div>
   <div class="cart-icon" onclick="goCart()">🛒<span class="cart-count" id="cartCount">0</span></div>
 </div>
-
 <div class="grid" id="itemsGrid"></div>
-
 <div class="bottom-cart-bar" id="cartBar">
   <div class="cart-summary"><span id="cartItems">0 Items</span> • <span class="cart-price" id="cartPrice">₹0</span></div>
   <button class="view-cart-btn" onclick="goCart()">View Cart</button>
 </div>
 
 <script>
-let cart=JSON.parse(localStorage.getItem('cart')||'[]');
+let cart = JSON.parse(localStorage.getItem('cart') || '[]');
 
-async function load(){
-  const cat=localStorage.getItem('selectedCategory')||'Items';
-  categoryName.textContent=cat;
-  itemsGrid.innerHTML='<div class="loading-state">Loading...</div>';
+async function load() {
+  const cat = localStorage.getItem('selectedCategory') || 'Items';
+  document.getElementById('categoryName').textContent = cat;
+  document.getElementById('itemsGrid').innerHTML = '<div class="loading-state">Loading...</div>';
 
-  const res=await fetch('/api/items/'+encodeURIComponent(cat));
-  const data=await res.json();
+  const res = await fetch('/api/items/' + encodeURIComponent(cat));
+  const data = await res.json();
 
-  itemsGrid.innerHTML=data.items.map(i=>`
-    <div class="item">
-      <img src="${i.imageUrl}" onerror="this.src='https://via.placeholder.com/300'">
-      <div class="info">
-        <div class="name">${i.name}</div>
-        <div class="price">₹${i.price}</div>
+  document.getElementById('itemsGrid').innerHTML = data.items.map(i => {
+    const priceToUse = i.offerPrice || i.price;
+    const originalToShow = i.originalPrice || i.price;
+    const showStrikethrough = i.originalPrice && i.originalPrice > i.offerPrice;
+
+    return `
+      <div class="item">
+        <img src="${i.imageUrl}" onerror="this.src='https://placehold.co/300x300?text=No+Image'">
+        <div class="info">
+          <div class="name">${i.name}</div>
+          <div class="price">
+            ${showStrikethrough ? `<span class="original-price">₹${originalToShow}</span>` : ''}
+            <span class="offer-price">₹${priceToUse}</span>
+          </div>
+        </div>
+        <div class="action">
+          <button class="add-btn" onclick="add('${i._id}','${i.name.replace(/'/g, "\\'")}',${priceToUse},this)">
+            +
+            <svg viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="white"/></svg>
+          </button>
+        </div>
       </div>
-      <div class="action">
-        <button class="add-btn" onclick="add('${i._id}','${i.name}',${i.price},this)">
-          +
-          <svg viewBox="0 0 100 100">
-            <circle cx="50" cy="50" r="40" fill="white"/>
-          </svg>
-        </button>
-      </div>
-    </div>
-  `).join('');
-  update();
+    `;
+  }).join('');
+
+  updateCartUI();
 }
 
-function add(id,name,price,btn){
-  let f=cart.find(i=>i.id===id);
-  f?f.qty++:cart.push({id,name,price,qty:1});
-  localStorage.setItem('cart',JSON.stringify(cart));
+function add(id, name, price, btn) {
+  let item = cart.find(x => x.id === id);
+  if (item) item.qty++;
+  else cart.push({ id, name, price, qty: 1 });
+  localStorage.setItem('cart', JSON.stringify(cart));
   btn.classList.add('active');
-  setTimeout(()=>btn.classList.remove('active'),600);
-  update();
+  setTimeout(() => btn.classList.remove('active'), 600);
+  updateCartUI();
 }
 
-function update(){
-  let items=cart.reduce((s,i)=>s+i.qty,0);
-  let total=cart.reduce((s,i)=>s+i.qty*i.price,0);
-  cartCount.textContent=items;
-  cartItems.textContent=items+' Items';
-  cartPrice.textContent='₹'+total;
-  cartBar.classList.toggle('visible',items>0);
+function updateCartUI() {
+  const items = cart.reduce((s, i) => s + i.qty, 0);
+  const total = cart.reduce((s, i) => s + i.qty * i.price, 0);
+  document.getElementById('cartCount').textContent = items;
+  document.getElementById('cartItems').textContent = items + ' Items';
+  document.getElementById('cartPrice').textContent = '₹' + total;
+  document.getElementById('cartBar').classList.toggle('visible', items > 0);
 }
 
-function goCart(){location.href='gcart.html'}
+function goCart() { location.href = 'gcart.html'; }
+
 load();
 </script>
-
 </body>
 </html>
